--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==1.6.3
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+mysql-connector-python==8.0.6
 pbr==4.0.1
 pylint==1.8.4
 six==1.11.0
